<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tvReg" />
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvUid" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
	 <LinearLayout
	        android:id="@+id/linearLayout2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView01"
	            style="@style/text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tvPwd" />
	
	        <EditText
	            android:id="@+id/editText2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="textPassword" />
	
	    </LinearLayout>

	 <LinearLayout
	     android:id="@+id/linearLayout3"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content" >

	     <TextView
	         android:id="@+id/textView1"
	         style="@style/text"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="@string/sex" />

	     <RadioGroup
	         android:id="@+id/radioGroup1"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:orientation="horizontal" >

	         <RadioButton
	             android:id="@+id/radio0"
	             style="@style/text"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:checked="true"
	             android:text="@string/male" />

	         <RadioButton
	             android:id="@+id/radio2"
	             style="@style/text"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:text="@string/female" />

	     </RadioGroup>

	 </LinearLayout>

	 <LinearLayout
	     android:id="@+id/linearLayout4"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:orientation="horizontal" >
	     <TextView
	         android:id="@+id/textView3"
	         style="@style/text"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="@string/hobby" />
	     <CheckBox
	         android:id="@+id/checkBox1"
	         style="@style/text"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="流行" />
	     <CheckBox
	         android:id="@+id/checkBox2"
	         style="@style/text"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="摇滚" />
	     
	     <CheckBox
	         android:id="@+id/checkBox3"
	         style="@style/text"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="轻音乐" />

	 </LinearLayout>
	 
	 <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <Button
            android:id="@+id/button1"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnReg" />

        <Button
            android:id="@+id/button2"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="返回" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="Hello~ Write by Chen Binjie." />

</LinearLayout>